# booster_soccer_showdown

./: .gitignore  IMITATION_LEARNING.md  pyproject.toml  test_token.py
booster_control/: se3_keyboard.py  t1_utils.py  teleoperate.py
imitation_learning/: test.py  train.py
imitation_learning/agents/: __init__.py  bc.py  gcbc.py  gciql.py  hiql.py  iql.py
imitation_learning/scripts/: collect_data.py  jax2torch.py  preprocessor.py
imitation_learning/submission/: model.py  submit_sai.py
imitation_learning/utils/: __init__.py  buffers.py  evaluation.py  flax_utils.py  logging.py  networks.py
mimic/: forward_kinematics.py  visualize_data.py
training_scripts/: ddpg.py  main.py  preprocessor.py  smoke_test.py  test.py  training.py
