[project]
name = "booster-soccer-showdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.7",
    "flax>=0.12.0",
    "glfw>=2.10.0",
    "hf-xet>=1.2.0",
    "huggingface-hub>=1.0.1",
    "imageio>=2.37.0",
    "ipykernel>=7.1.0",
    "jax[cuda12]>=0.8.0",
    "jupyter>=1.1.1",
    "numpy==2.1.3",
    "nvidia-htop>=1.2.0",
    "pynput>=1.8.1",
    "sai-mujoco>=0.1.21",
    "sai-rl>=0.1.35",
    "stable-baselines3>=2.7.0",
    "tensorflow==2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[dependency-groups]
lint = [
    "ruff>=0.14.3",
]
notebooks = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W"]
lint.ignore = ["E501", "F401", "E402", "W293", "N812", "N806", "F403", "N801"]
